# gitalite

./: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  Cargo.toml  Config.example.ron  Config.ron  Dockerfile  README.md  docker-compose.yaml  package-lock.json  package.json  postcss.config.js  rollup.config.ts  rust-toolchain.toml  rustfmt.toml  tsconfig.json
src/: auth.rs  config.rs  context.rs  error.rs  front_matter.rs  git.rs  main.rs  page.rs  pandoc.rs  role.rs  route.rs  template.rs  user.rs
static-src/: color_scheme.ts  dom.ts  edit.ts  foo.ts  main.ts
static-src/styles/: editor.pcss  grid.pcss  pandoc.pcss  style.pcss  toggle.pcss  variables.pcss
templates/: base.html  categories.html  edit.html  error.html  history.html  login.html  new.html  page.html  profile.html
